src/objects/Apttus_Approval__Approval_Process__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Process_External_ID__c</fullName>
        <description>R5-External Id used for migration</description>
        <externalId>true</externalId>
        <label>Approval Process External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Label__c</fullName>
        <label>Object Label</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Line Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Term Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Screening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Type__c</fullName>
        <description>This field represents the business context object for which this approval process applies</description>
        <inlineHelpText>This field represents the business context object for which this approval process applies</inlineHelpText>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus__APTS_Agreement__c</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus__AgreementLineItem__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus__Agreement_Term_Exception__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus_Config2__LineItem__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus_Proposal__Proposal__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity_Screening__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
</CustomObject>